JS code was separated from HTML template. Added form for Interval Updating.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,14 @@
+<!--
+Welcome! Ver descriptions allocated here:
+
+(alpha)
+0.1.1 - simple requests
+0.1.2 - improved updates, table output
+0.1.3 - bootstrap.js, dynamic update
+
+--->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Port Monitoring</title>
@@ -16,175 +25,74 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
-    <script>
-        $(document).ready(function() {
-
-            var ip_element = document.getElementById('input_ip');
-            var port_element = document.getElementById('input_port');
-            var button = document.getElementById('start_button');
-            var auto_updater;
-            var pic = new Image(50, 50);
-
-            function ValidateIP(ip) {
-                return /^(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$/.test(ip)
-            }
-            function isNumeric(num){
-              return !isNaN(num)
-            }
-
-            ip_element.oninput = function (event) {
-                if (ValidateIP(ip_element.value) === true) {
-                    ip_element.classList.add('is-valid');
-                    ip_element.classList.remove("is-invalid");
-                } else {
-                    ip_element.classList.add('is-invalid');
-                    ip_element.classList.remove("is-valid");
-                }
-            };
-
-            port_element.oninput = function (event) {
-                if (isNumeric(port_element.value) === true) {
-                    port_element.classList.add('is-valid');
-                    ip_element.classList.remove("is-invalid");
-                } else {
-                    port_element.classList.add('is-invalid');
-                    ip_element.classList.remove("is-valid");
-                }
-            };
-
-            function check_valid(ip_val, port_val) {
-                return ValidateIP(ip_val) === true && isNumeric(port_val) === true;
-            }
-
-            button.onclick = function get_updates() {
-                console.log('update');
-                if (check_valid(ip_element.value, port_element.value)) {
-                    update_data(ip_element.value, port_element.value);
-                    clearInterval(auto_updater);
-                    auto_updater = setInterval(update_auto, 3000, ip_element.value, port_element.value)
-                } else {
-                    set_danger_button(timeout=true)
-                }
-            };
-
-            function set_danger_button(timeout=true) {
-                button.disabled = true;
-                button.classList.remove("btn-outline-primary");
-                button.classList.add("btn-danger");
-                if (timeout===true) {
-                    var timeout_button = setTimeout(restore_button, 1000);
-                }
-            }
-
-            function restore_button() {
-                button.disabled = false;
-                button.classList.remove("btn-danger");
-                button.classList.add("btn-outline-primary");
-            }
-
-            function data_up(data) {
-                var today = new Date();
-                    var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
-                    var macs = JSON.parse(JSON.stringify(data["macs"]));
-                    var vlans = JSON.parse(JSON.stringify(data["vlans"]));
-
-                    if (data["status"] === "1-up") {
-                        pic.src = "/static/status-yes.jpg";
-                    } else if (data["status"] === "2-down") {
-                        pic.src = "/static/status-no.jpg";
-                    } else {
-                        pic.src = "/static/status-undef.jpg";
-                    }
-                    document.getElementById('img_status').src = pic.src;
-                    document.getElementById('status').innerHTML = time + "<br>" + JSON.parse(JSON.stringify(data["status"]));
-                    document.getElementById('speed').innerHTML = JSON.parse(JSON.stringify(data["speed"]));
-                    document.getElementById('addresses').innerHTML = '';
-                    for (let i = 0; i < macs.length; i++) {
-                        document.getElementById('addresses').innerHTML += macs[i] + ' VLAN:' + vlans[i] + '<br><br>';
-                    }
-            }
-
-            function update_data(ip_val, port_val) {
-                var url = '/api/update?' + $.param({ip: ip_val, port: port_val});
-                fetch(url, {
-                    method: 'GET',
-                })
-                    .then(response => response.json())
-                    .then(data => {
-                        console.log(data);
-                        document.getElementById('ip_port').innerHTML = ip_val + ':' + port_val;
-                        document.getElementById('title').innerHTML = JSON.parse(JSON.stringify(data["descr"]));
-                        document.getElementById('sysname').innerHTML = JSON.parse(JSON.stringify(data["sysname"]));
-
-                        data_up(data);
-                    })
-                    .catch(error => console.log(error));
-            }
-
-            function update_auto(ip_val, port_val) {
-                var url = '/api/update_auto?' + $.param({ip: ip_val, port: port_val});
-                fetch(url, {
-                    method: 'GET',
-                })
-                    .then(response => response.json())
-                    .then(data => {
-                        console.log(data);
-                        data_up(data)
-                    })
-                    .catch(error => console.log(error));
-            }
-        });
-    </script>
+    <script type="text/javascript" src="{{ url_for('static', filename='dtable.js') }}"></script>
 </head>
 <body>
     <div class="container">
-        <h2>Switch Checker Online</h2>
-        <h4>ver=0.1.3(alpha)</h4>
+        <div align="center">
+            <br><h2>Проверка статуса порта Онлайн</h2>
+            <h4>ver=0.1.3(alpha)</h4>
+        </div>
 
         <form name="update" method="get" action="api/update" class="dropdown-menu-left p-4">
-            <div class="form-row">
-                <div class="form-group">
+            <div class="form-row" align="center">
+                <div class="form-group-sm">
                     <label for="input_ip">IP</label>
                     <div class="form-group">
-                        <input id="input_ip" type=text value="192.168.111.29" placeholder="192.168.1.1" class="input_ip">
-                        <small id="ip_help" class="form-text text-muted">switch ip address</small>
-                        <div class="invalid-tooltip">Please check IP</div>
+                        <input id="input_ip" type=text value="192.168.111.29" placeholder="192.168.1.1" class="form-control">
+                        <small id="ip_help" class="form-text text-muted">IP свича</small>
+                        <div class="invalid-tooltip">Проверьте IP</div>
                     </div>
                 </div>
-                <div class="form-group form-group-sm">
-                    <label for="input_port">Port</label>
+                <div class="form-group-sm">
+                    <label for="input_port">Порт</label>
                     <div class="form-group">
-                        <input id="input_port" type=text value="3" placeholder="1" class="input_port">
-                        <small id="port_help" class="form-text text-muted">port number</small>
-                        <div class="invalid-tooltip">Please check port</div>
+                        <input id="input_port" type=text value="3" placeholder="1" class="form-control">
+                        <small id="port_help" class="form-text text-muted">Номер порта</small>
+                        <div class="invalid-tooltip">Проверте порт</div>
                     </div>
                 </div>
             </div>
-            <div class="form-row pt-3">
-                <input type=button value="Start" id="start_button" class="btn btn-outline-primary btn-lg">
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <label class="input-group-text" for="update_every">Интервал обновления</label>
+                </div>
+                <select class="custom-select" id="update_every">
+                    <option selected>Выберите...</option>
+                    <option value="3">3</option>
+                    <option value="5">5</option>
+                    <option value="10">10</option>
+                </select>
+                <div class="input-group-append">
+                    <span class="input-group-text">(сек.)</span>
+                </div>
             </div>
+            <div class="align-center">
+                <input type=button value="Запуск" id="start_button" class="btn btn-outline-primary btn-lg">
+            </div>
+
         </form>
 
         <table class="table">
             <tr>
-                <th>IP:port</th>
+                <th>IP:порт</th>
                 <td id="ip_port" colspan=2></td>
             </tr>
             <tr>
-                <th>Title</th>
+                <th>Устройство</th>
                 <td id="title" colspan=2></td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Имя</th>
                 <td id="sysname" colspan=2></td>
             </tr>
             <tr>
-                <th>Link status</th>
-                <td><img id="img_status" width=40 height=40></td>
+                <th>Статус порта</th>
+                <td><img src="" alt="" id="img_status" width=40 height=40></td>
                 <td id="status"></td>
             </tr>
             <tr>
-                <th>Speed</th>
+                <th>Скорость порта</th>
                 <td id="speed" colspan=2></td>
             </tr>
             <tr>
