a little bit text edits

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@ Welcome! Ver descriptions allocated here:
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 				</div>
 				<div class="modal-body text-justify">
-					Приложение "Статус порта Онлайн" (codename:<a href="https://github.com/mamaragan/FlaSNMP">FlaSNMP</a>) предназначено для мониторинга портов маршрутизаторов.
+					Приложение "Статус порта Онлайн" (codename:<a href="https://github.com/mamaragan/FlaSNMP">FlaSNMP</a>) предназначено для мониторинга портов коммутаторов.
 					Разработчик приложения - Имигеев Евгений.
 
 					<div style="text-align: center;">
@@ -102,8 +102,8 @@ Welcome! Ver descriptions allocated here:
                             Перезагрузка может не помогать, если:
                             <ul>
                                 <li>Введен недоступный в сети IP-адрес или порт</li>
-                                <li>Для маршрутизатора не настроена программа</li>
-                                <li>Маршрутизатор не поддерживает протокол мониторинга</li>
+                                <li>Для коммутатора не настроена программа</li>
+                                <li>Коммутатор не поддерживает протокол мониторинга</li>
                             </ul>
                         </li>
 					</ul>
